--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,7 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |type, mess| %>
-        <div class='alert alert-<%= type %>'>
-          <%= mess %>
-        </div>
+        <%= content_tag(:div, mess, class: "alert alert-#{type}") %>
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
